# kkk

./: .gitignore  LICENSE  README.md  build-with-build.bat  build-with-env.bat  index.html  latest.json  package.json  pnpm-lock.yaml  test_date_parse.js  tsconfig.tsbuildinfo  vite.config.ts
src/: main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json  todo-widget.json
src-tauri/src/: main.rs
src-tauri/src/speech/: mod.rs
src/components/ExcelViewer/: MergedSheetTable.tsx  index.tsx
src/components/FileUpload/: index.tsx
src/components/Layout/: index.tsx
src/components/common/: CardContainer.tsx  CompareSheetsDialog.tsx  CustomTabs.tsx  DataTable.tsx  EmptyState.tsx  ErrorAlert.tsx  ExportSheetsDialog.tsx  FileInfo.tsx  LoadingSpinner.tsx  LocalDataManagerDialog.tsx  MergeSheetsDialog.tsx  PageHeader.tsx  README.md  RenameSheetDialog.tsx  RichTextEditor.tsx  RichTextViewer.tsx  SplitTableDialog.tsx  StatusBar.tsx  index.ts
src/components/speech/: RecorderControls.tsx  SessionHistory.tsx  TranscriptView.tsx
src/components/todo/: ProductivityChart.tsx  TaskQuickForm.tsx  TodoCalendar.tsx  TodoEisenhowerMatrix.tsx  TodoFilters.tsx  TodoFormDialog.tsx  TodoGanttView.tsx  TodoHeroBanner.tsx  TodoKanbanBoard.tsx  TodoList.tsx  TodoMetricsPanel.tsx  TodoSelectedDatePanel.tsx  TodoSidebar.tsx  TodoStatsPanel.tsx  TodoTaskListSection.tsx  TodoTimeLogDialog.tsx  TodoTimeSummaryPanel.tsx  TodoToolbar.tsx  TodoWeeklyReportDialog.tsx
src/hooks/: useCommon.ts  useExcel.ts  useExcelManager.ts  useTodoReminders.ts
src/pages/: ExcelPage.tsx  SpeechToTextPage.tsx  TimeInvestPage.tsx  TodoCalendarPage.tsx  TodoMatrixPage.tsx  TodoPage.tsx  TodoWidgetPage.tsx
src/routes/: __root.tsx  index.tsx
src/routes/calendar/: index.tsx
src/routes/excel/: index.tsx
src/routes/matrix/: index.tsx
src/stores/: todoReminderStore.ts  todoStore.ts
src/styles/: global.scss
src/theme/: index.ts
src/types/: speech.ts
src/utils/: audioUtils.ts  commonUtils.ts  excelHelper.ts  excelUtils.ts  logger.ts  notificationUtils.ts  richTextUtils.ts  styleUtils.ts  todoUtils.ts
src/workers/: excelWorker.ts
(+9 files in other folders)
