[package]
name = "Kk"
version = "1.0.0-alpha.3"
description = "A Modern Jellyfin Client"
authors = ["prayag17", "Kk contributors (https://github.com/prayag17/Kk/graphs/contributors)"]
license = "GPL-3.0-only"
repository = "https://github.com/prayag17/Kk/"
default-run = "Kk"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
log = "^0.4.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [ "devtools", "tray-icon", "image-png"] }
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["colored"] }
portpicker = "0.1" # used in the example to pick a random free port
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-notification = "2.0.0-rc.1"
tauri-plugin-upload = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
whisper-rs = "0.15.1"
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
hound = "3.5"
base64 = "0.22"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
num_cpus = "1.16"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
